--- a/assets/category.html
+++ b/assets/category.html
@@ -278,13 +278,13 @@
                       </ul>
                     </div>
                 </li>
-              <li><a href="" class="nav-linked">Computers</a></li>
-              <li><a href="" class="nav-linked"> Mobiles & Accessories</a></li>
-              <li><a href="" class="nav-linked">Home Entertainment</a></li>
-              <li><a href="" class="nav-linked">Contact</a></li>
-              <li><a href="" class="nav-linked">New</a></li>
-              <li><a href="" class="nav-linked link-active">Sale</a></li>
-              <li><a href="" class="nav-linked">Contact</a></li>
+                <li><a href="assets/product.html" class="nav-linked">Computers</a></li>
+                <li><a href="assets/category.html" class="nav-linked"> Mobiles & Accessories</a></li>
+                <li><a href="" class="nav-linked">Home Entertainment</a></li>
+                <li><a href="assets/category.html" class="nav-linked">Contact</a></li>
+                <li><a href="" class="nav-linked">New</a></li>
+                <li><a href="" class="nav-linked link-active">Sale</a></li>
+                <li><a href="assets/contact.html" class="nav-linked">Contact</a></li>
           </ul>
         </nav>
       </div>
